clearTasks func is updated, some minor changes to styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -124,7 +124,7 @@ h3 {
   padding: 10px;
   margin: 10px auto;
 }
-.clear-tasks:hover {
+.clear-tasks:active {
   animation-name: clear-transition;
   animation-duration: 1s;
   animation-timing-function: linear;
