--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,7 +123,7 @@ h3 {
     padding: 10px;
     margin: 10px auto;
 
-    &:hover {
+    &:active {
         animation-name: clear-transition;
         animation-duration: 1s;
         animation-timing-function: linear;
